--- a/index.html
+++ b/index.html
@@ -21,30 +21,47 @@
     </header>
     <main>
         <div>
-            <h1>TypoLib, your new and modern typographic library</h1>
+            <h1>Welcome to TypoLib, your new and modern typographic library</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo laudantium, error iure debitis aperiam, eveniet qui pariatur maiores modi laborum ut repellendus commodi dignissimos a quod eligendi numquam sint atque.</p>
+            <p>Included tags:</p>
+            <code>&#60h1&#62</code><code>&#60h2&#62</code><code>&#60h3&#62</code><code>&#60h4&#62</code><code>&#60h5&#62</code><code>&#60h6&#62</code>
         </div>
         <section>
             <h2>Headings</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo laudantium, error iure debitis aperiam, eveniet qui pariatur maiores modi laborum ut repellendus commodi dignissimos a quod eligendi numquam sint atque.</p>
+            <div>
+                <h1>This is h1</h1>
+                <h2>This is h2</h2>
+                <h3>This is h3</h3>
+                <h4>This is h4</h4>
+                <h5>This is h5</h5>
+                <h6>This is h6</h6>
+            </div>
         </section>
         <section>
             <h2>Text</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste id ab dicta totam cumque nisi expedita officiis, consectetur nemo facilis vitae ipsam beatae debitis sed, molestias porro. Quae, ab eos.</p>
         </section>
         <section>
             <h2>Buttons</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi perferendis consectetur vitae sunt mollitia rem culpa aliquam. Ipsum explicabo in odit excepturi fuga rerum vel ipsam nulla veritatis autem!</p>
         </section>
         <section>
             <h2>Lists</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error numquam ducimus perspiciatis quam ea illo in veritatis possimus commodi non cum quis, labore laboriosam illum harum nisi quos ad ipsam.</p>
         </section>
         <section>
             <h2>Tables</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quas rem hic numquam velit. Perferendis, minima! Porro, aliquam nesciunt, vel provident dolorum neque reiciendis illum maxime labore, earum maiores? Culpa!</p>
         </section>
         <section>
             <h2>Photos</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut temporibus odit voluptatum nam, est ab voluptas hic quidem totam! Libero labore perspiciatis eius, quo facere reprehenderit ducimus recusandae dolorum natus.</p>
         </section>
     </main>
     <footer>
         <div>
-            
+
         </div>
     </footer>
 </body>
