--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>TypoLib - Typographic Library</title>
 </head>
 <body>
@@ -10,25 +14,25 @@
         <nav>
             <div class="logo"></div>
             <menu>
-                <li>Headings</li>
-                <li>Text</li>
-                <li>Buttons</li>
-                <li>Lists</li>
-                <li>Tables</li>
-                <li>Photos</li>
+                <li><a href="">Headings</a></li>
+                <li><a href="">Text</a></li>
+                <li><a href="">Buttons</a></li>
+                <li><a href="">Lists</a></li>
+                <li><a href="">Tables</a></li>
+                <li><a href="">Photos</a></li>
             </menu>
         </nav>
     </header>
     <main>
         <div>
             <h1>Welcome to TypoLib, your new and modern typographic library</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo laudantium, error iure debitis aperiam, eveniet qui pariatur maiores modi laborum ut repellendus commodi dignissimos a quod eligendi numquam sint atque.</p>
+            <p>Unleash the power of typography with our library. Elevate your designs, captivate your audience, and bring your ideas to life.</p>
             <p>Included tags:</p>
             <code>&#60h1&#62</code><code>&#60h2&#62</code><code>&#60h3&#62</code><code>&#60h4&#62</code><code>&#60h5&#62</code><code>&#60h6&#62</code>
         </div>
         <section>
             <h2>Headings</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo laudantium, error iure debitis aperiam, eveniet qui pariatur maiores modi laborum ut repellendus commodi dignissimos a quod eligendi numquam sint atque.</p>
+            <p>Make a bold statement with our diverse collection of headings.</p>
             <div>
                 <h1>This is h1</h1>
                 <h2>This is h2</h2>
@@ -40,23 +44,83 @@
         </section>
         <section>
             <h2>Text</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste id ab dicta totam cumque nisi expedita officiis, consectetur nemo facilis vitae ipsam beatae debitis sed, molestias porro. Quae, ab eos.</p>
+            <p>This typographic library offers an array of styles to suit every message.</p>
+
         </section>
         <section>
             <h2>Buttons</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi perferendis consectetur vitae sunt mollitia rem culpa aliquam. Ipsum explicabo in odit excepturi fuga rerum vel ipsam nulla veritatis autem!</p>
+            <p>Click, engage, and make a lasting impression with these button variants.</p>
         </section>
         <section>
             <h2>Lists</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error numquam ducimus perspiciatis quam ea illo in veritatis possimus commodi non cum quis, labore laboriosam illum harum nisi quos ad ipsam.</p>
+            <p>Organize and prioritize effortlessly with our versatile list variants.</p>
+            <div>
+                <h3>Ordered list</h3>
+                <ol>
+                    <li>Clean the living room</li>
+                    <li>Make the bed</li>
+                    <li>Wash the dishes</li>
+                    <li>Vacuum the floor</li>
+                    <li>Set the table</li>
+                </ol>
+            </div>
+            <div>
+                <h3>Unordered list</h3>
+                <ul>
+                    <li>Milk</li>
+                    <li>Flour</li>
+                    <li>Eggs</li>
+                    <li>Bread</li>
+                    <li>Sugar</li>
+                </ul>
+            </div>
         </section>
         <section>
             <h2>Tables</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quas rem hic numquam velit. Perferendis, minima! Porro, aliquam nesciunt, vel provident dolorum neque reiciendis illum maxime labore, earum maiores? Culpa!</p>
+            <p>Transform raw information into insightful visuals that captivate your audience and convey complex data into something organized.</p>
+            <div>
+                <table>
+                    <caption>Table of data</caption>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Job</th>
+                            <th>Salary</th>
+                            <th>Drivers licence</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Martina</td>
+                            <td>Assistant</td>
+                            <td>35K</td>
+                            <td>Yes</td>
+                        </tr>
+                        <tr>
+                            <td>Sarah</td>
+                            <td>Teacher</td>
+                            <td>40K</td>
+                            <td>Yes</td>
+                        </tr>
+                        <tr>
+                            <td>Eric</td>
+                            <td>Manager</td>
+                            <td>85K</td>
+                            <td>Yes</td>
+                        </tr>
+                        <tr>
+                            <td>Peter</td>
+                            <td>Marketing Specialist</td>
+                            <td>65K</td>
+                            <td>No</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
         <section>
             <h2>Photos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut temporibus odit voluptatum nam, est ab voluptas hic quidem totam! Libero labore perspiciatis eius, quo facere reprehenderit ducimus recusandae dolorum natus.</p>
+            <p></p>
         </section>
     </main>
     <footer>
