--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>TypoLib - Typographic Library</title>
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo"></div>
+            <div class="logo">TypoLib</div>
             <menu>
                 <li><a href="">Headings</a></li>
                 <li><a href="">Text</a></li>
@@ -28,7 +28,7 @@
             <h1>Welcome to TypoLib, your new and modern typographic library</h1>
             <p>Unleash the power of typography with our library. Elevate your designs, captivate your audience, and bring your ideas to life.</p>
             <p>Included tags:</p>
-            <code>&#60h1&#62</code><code>&#60h2&#62</code><code>&#60h3&#62</code><code>&#60h4&#62</code><code>&#60h5&#62</code><code>&#60h6&#62</code>
+            <code>&#60h1&#62</code> <code>&#60h2&#62</code> <code>&#60h3&#62</code> <code>&#60h4&#62</code> <code>&#60h5&#62</code> <code>&#60h6&#62</code>
         </div>
         <section>
             <h2>Headings</h2>
@@ -45,7 +45,9 @@
         <section>
             <h2>Text</h2>
             <p>This typographic library offers an array of styles to suit every message.</p>
-
+            <p>Included tags:</p>
+            <code>&#60p&#62</code> <code>&#60a&#62</code> <code>&#60i&#62</code> <code>&#60s&#62</code> <code>&#60b&#62</code> <code>&#60mark&#62</code> <code>&#60small&#62</code> <code>&#60u&#62</code>
+            <p>This is how <b>bold</b> text looks like. This is an <i>italic</i> text. This text is <a href="#">clickable</a>. This is <u>underlined</u> and this is <s>striked</s>. This one is <mark>marked</mark> and this one is <small>small</small>.</p>
         </section>
         <section>
             <h2>Buttons</h2>
