--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <li><a href="">Tables</a></li>
                 <li><a href="">Photos</a></li>
             </menu>
+            <div class="header__button">
+
+            </div>
         </nav>
     </header>
     <main>
@@ -52,6 +55,12 @@
         <section>
             <h2>Buttons</h2>
             <p>Click, engage, and make a lasting impression with these button variants.</p>
+            <div>
+                <a class="button--basic">Button</a>
+                <a class="button--reversed">Button</a>
+                <a class="button--noceffect">Button</a>
+                <a class="button--noclick">Button</a>
+            </div>
         </section>
         <section>
             <h2>Lists</h2>
