--- a/index.html
+++ b/index.html
@@ -131,7 +131,18 @@
         </section>
         <section>
             <h2>Photos</h2>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deserunt earum cumque repudiandae consequatur exercitationem? Natus nobis dolores illum perferendis doloribus ad neque assumenda ab cumque sit! Accusantium, dolores? Sequi?</p>
+            <h3>Single image</h3>
+            <figure>
+                <a>
+                    <img src="" alt="">
+                    <figcaption></figcaption>
+                </a>
+            </figure>
+            <h3>Gallery</h3>
+            <div class="gallery">
+                
+            </div>
         </section>
     </main>
     <footer>
