--- a/index.html
+++ b/index.html
@@ -135,13 +135,36 @@
             <h3>Single image</h3>
             <figure>
                 <a>
-                    <img src="" alt="">
+                    <img src="./img/singlephoto.jpg" alt="">
                     <figcaption></figcaption>
                 </a>
             </figure>
             <h3>Gallery</h3>
             <div class="gallery">
-                
+                <figure>
+                    <a>
+                        <img src="./img/gallery_1.jpg" alt="">
+                        <figcaption></figcaption>
+                    </a>
+                </figure>
+                <figure>
+                    <a>
+                        <img src="./img/gallery_2.jpg" alt="">
+                        <figcaption></figcaption>
+                    </a>
+                </figure>
+                <figure>
+                    <a>
+                        <img src="./img/gallery_3.jpg" alt="">
+                        <figcaption></figcaption>
+                    </a>
+                </figure>
+                <figure>
+                    <a>
+                        <img src="./img/gallery_4.jpg" alt="">
+                        <figcaption></figcaption>
+                    </a>
+                </figure>
             </div>
         </section>
     </main>
