večerní směna - css

--- a/index.html
+++ b/index.html
@@ -11,31 +11,30 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="logo">TypoLib</div>
-            <menu>
-                <li><a href="">Headings</a></li>
-                <li><a href="">Text</a></li>
-                <li><a href="">Buttons</a></li>
-                <li><a href="">Lists</a></li>
-                <li><a href="">Tables</a></li>
-                <li><a href="">Photos</a></li>
+        <nav class="navigace">
+            <div><a class="navigace__logo" href="./index.html">TypoLib</a></div>
+            <menu class="navigace__menu">
+                <li class="navigace__li"><a class="navigace__a" href="">Headings</a></li>
+                <li class="navigace__li"><a class="navigace__a" href="">Text</a></li>
+                <li class="navigace__li"><a class="navigace__a" href="">Buttons</a></li>
+                <li class="navigace__li"><a class="navigace__a" href="">Lists</a></li>
+                <li class="navigace__li"><a class="navigace__a" href="">Tables</a></li>
+                <li class="navigace__li"><a class="navigace__a" href="">Photos</a></li>
             </menu>
-            <div class="header__button">
-
-            </div>
         </nav>
+        <div class="welcome-text">
+            <h1 class="welcome-text__h1">Welcome to TypoLib, your new and modern typographic library</h1>
+            <p>Unleash the power of typography with our library. Elevate your designs, captivate your audience, and bring your ideas to life.</p>
+        </div>
     </header>
     <main>
-        <div>
-            <h1>Welcome to TypoLib, your new and modern typographic library</h1>
-            <p>Unleash the power of typography with our library. Elevate your designs, captivate your audience, and bring your ideas to life.</p>
-            <p>Included tags:</p>
-            <code>&#60h1&#62</code> <code>&#60h2&#62</code> <code>&#60h3&#62</code> <code>&#60h4&#62</code> <code>&#60h5&#62</code> <code>&#60h6&#62</code>
-        </div>
         <section>
             <h2>Headings</h2>
             <p>Make a bold statement with our diverse collection of headings.</p>
+            <div>
+                <p>Included tags:</p>
+                <code>&#60h1&#62</code> <code>&#60h2&#62</code> <code>&#60h3&#62</code> <code>&#60h4&#62</code> <code>&#60h5&#62</code> <code>&#60h6&#62</code>
+            </div>
             <div>
                 <h1>This is h1</h1>
                 <h2>This is h2</h2>
