--- a/index.html
+++ b/index.html
@@ -59,11 +59,10 @@
         <section id="buttons">
             <h2>Buttons</h2>
             <p>Click, engage, and make a lasting impression with these button variants.</p>
-            <div>
-                <a class="button--basic">Button</a>
-                <a class="button--reversed">Button</a>
-                <a class="button--noceffect">Button</a>
-                <a class="button--noclick">Button</a>
+            <div class="buttons__div">
+                <a class="button button--basic">Button</a>
+                <a class="button button--reversed">Button</a>
+                <a class="button button--noclick">Button</a>
             </div>
         </section>
         <section id="lists">
