--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div>
                 <p>Included tags:</p>
                 <div class="code">
-                    <code>&#60h1&#62</code> <code>&#60h2&#62</code> <code>&#60h3&#62</code> <code>&#60h4&#62</code> <code>&#60h5&#62</code> <code>&#60h6&#62</code>
+                    <code>&#60h1&#62</code> <code>&#60h2&#62</code> <code>&#60h3&#62</code> <code>&#60h4&#62</code> <code>&#60h5&#62</code>
                 </div>
             </div>
             <div>
@@ -44,7 +44,6 @@
                 <h3>This is h3</h3>
                 <h4>This is h4</h4>
                 <h5>This is h5</h5>
-                <h6>This is h6</h6>
             </div>
         </section>
         <section id="text">
