--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deserunt earum cumque repudiandae consequatur exercitationem? Natus nobis dolores illum perferendis doloribus ad neque assumenda ab cumque sit! Accusantium, dolores? Sequi?</p>
             <h3>Single image</h3>
             <figure>
-                <a>
+                <div class="image">
                     <img src="./img/singlephoto.jpg" alt="">
                     <figcaption></figcaption>
-                </a>
+                </div>
             </figure>
             <h3>Gallery</h3>
             <div class="gallery">
