css, konec hodiny

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav class="navigace">
-            <div><a class="navigace__logo" href="./index.html">TypoLib</a></div>
+            <a class="navigace__logo" href="./index.html"><h1 class="h1-logo">TypoLib</h1></a>
             <menu class="navigace__menu">
                 <li class="navigace__li"><a class="navigace__a" href="#headings">Headings</a></li>
                 <li class="navigace__li"><a class="navigace__a" href="#text">Text</a></li>
@@ -24,7 +24,7 @@
             </menu>
         </nav>
         <div class="welcome-text">
-            <h1 class="welcome-text__h1">Welcome to TypoLib, your new and modern typographic library</h1>
+            <p class="welcome-text__h1">Welcome to <span class="mark">TypoLib</span>, your new and modern typographic library</p>
             <p>Unleash the power of typography with our library. Elevate your designs, captivate your audience, and bring your ideas to life.</p>
         </div>
     </header>
@@ -151,28 +151,28 @@
             <h3>Gallery</h3>
             <div class="gallery">
                 <figure>
-                    <a>
+                    <div class="image">
                         <img src="./img/gallery_1.jpg" alt="">
                         <figcaption></figcaption>
-                    </a>
+                    </div>
                 </figure>
                 <figure>
-                    <a>
+                    <div class="image">
                         <img src="./img/gallery_2.jpg" alt="">
                         <figcaption></figcaption>
-                    </a>
+                    </div>
                 </figure>
                 <figure>
-                    <a>
+                    <div class="image">
                         <img src="./img/gallery_3.jpg" alt="">
                         <figcaption></figcaption>
-                    </a>
+                    </div>
                 </figure>
                 <figure>
-                    <a>
+                    <div class="image">
                         <img src="./img/gallery_4.jpg" alt="">
                         <figcaption></figcaption>
-                    </a>
+                    </div>
                 </figure>
             </div>
         </section>
