--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="welcome-text">
             <p class="welcome-text__h1">Welcome to <span class="mark">TypoLib</span>, your new and modern typographic library</p>
             <p>Unleash the power of typography with our library. Elevate your designs, captivate your audience, and bring your ideas to life.</p>
+            <a class="button button-demo">Download</a>
         </div>
     </header>
     <main>
@@ -33,7 +34,6 @@
             <h2>Headings</h2>
             <p>Make a bold statement with our diverse collection of headings.</p>
             <div>
-                <p>Included tags:</p>
                 <div class="code">
                     <code>&#60h1&#62</code> <code>&#60h2&#62</code> <code>&#60h3&#62</code> <code>&#60h4&#62</code> <code>&#60h5&#62</code>
                 </div>
@@ -49,7 +49,6 @@
         <section id="text">
             <h2>Text</h2>
             <p>This typographic library offers an array of styles to suit every message.</p>
-            <p>Included tags:</p>
             <div class="code">
                 <code>&#60p&#62</code> <code>&#60a&#62</code> <code>&#60i&#62</code> <code>&#60s&#62</code> <code>&#60b&#62</code> <code>&#60mark&#62</code> <code>&#60small&#62</code> <code>&#60u&#62</code>
             </div>
@@ -67,7 +66,6 @@
         <section id="lists">
             <h2>Lists</h2>
             <p>Organize and prioritize effortlessly with our versatile list variants.</p>
-            <p>Included tags:</p>
             <div class="code">
                 <code>&#60ol&#62</code> <code>&#60ul&#62</code> <code>&#60li&#62</code>
             </div>
