--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <h2>Text</h2>
             <p>This typographic library offers an array of styles to suit every message.</p>
             <div class="code">
-                <code>&#60p&#62</code> <code>&#60a&#62</code> <code>&#60i&#62</code> <code>&#60s&#62</code> <code>&#60b&#62</code> <code>&#60mark&#62</code> <code>&#60small&#62</code> <code>&#60u&#62</code>
+                <code>&#60p&#62</code> <code>&#60a&#62</code> <code>&#60i&#62</code> <code>&#60s&#62</code> <code>&#60b&#62</code> <code>&#60mark&#62</code> <code>&#60small&#62</code>
             </div>
-            <p>This is how <b>bold</b> text looks like. This is an <i>italic</i> text. This text is <a href="#">clickable</a>. This is <u>underlined</u> and this is <s>striked</s>. This one is <mark>marked</mark> and this one is <small>small</small>.</p>
+            <p>This is how <b>bold</b> text looks like. This is an <i>italic</i> text. This text is <a href="#">clickable</a> and this is <s>striked</s>. This one is <mark>marked</mark> and this one is <small>small</small>.</p>
         </section>
         <section id="buttons">
             <h2>Buttons</h2>
@@ -138,7 +138,7 @@
         </section>
         <section id="photos">
             <h2>Photos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deserunt earum cumque repudiandae consequatur exercitationem? Natus nobis dolores illum perferendis doloribus ad neque assumenda ab cumque sit! Accusantium, dolores? Sequi?</p>
+            <p>Transform your photos into captivating visual stories with our typography. Elevate your photo gallery's narrative, adding depth and style to every image.</p>
             <h3>Single image</h3>
             <figure>
                 <div class="image">
