--- a/index.html
+++ b/index.html
@@ -72,11 +72,28 @@
             <div>
                 <h3>Ordered list</h3>
                 <ol>
-                    <li>Clean the living room</li>
-                    <li>Make the bed</li>
-                    <li>Wash the dishes</li>
-                    <li>Vacuum the floor</li>
-                    <li>Set the table</li>
+                    <li>Programming Languages
+                        <ol>
+                          <li>C</li>
+                          <li>C++</li>
+                          <li>Java</li>
+                          <li>Python</li>
+                        </ol>
+                    </li>
+                    <li>Web Technologies
+                        <ol>
+                          <li>HTML</li>
+                          <li>CSS</li>
+                          <li>JavaScript
+                            <ol>
+                                <li>React</li>
+                                <li>Angular</li>
+                                <li>Vue</li>
+                            </ol>
+                          </li>
+                          <li>Bootstrap</li>
+                        </ol>
+                    </li>
                 </ol>
             </div>
             <div>
@@ -85,7 +102,12 @@
                     <li>Milk</li>
                     <li>Flour</li>
                     <li>Eggs</li>
-                    <li>Bread</li>
+                    <li>Bread
+                        <ul>
+                            <li>Wheat</li>
+                            <li>Wholegrain</li>
+                        </ul>
+                    </li>
                     <li>Sugar</li>
                 </ul>
             </div>
