--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/library.css">
-    <title>TypoLib - Typographic Library</title>
+    <title>TypoLib | Typographic Library</title>
 </head>
 <body>
     <header>
@@ -163,35 +163,36 @@
             <p>Transform your photos into captivating visual stories with our typography. Elevate your photo gallery's narrative, adding depth and style to every image.</p>
             <h3>Single image</h3>
             <figure>
-                <div class="image">
+                <a href="./img/singlephoto.jpg">
                     <img src="./img/singlephoto.jpg" alt="">
-                    <figcaption></figcaption>
-                </div>
+                </a>
+                <figcaption></figcaption>
             </figure>
             <h3>Gallery</h3>
             <div class="gallery">
                 <figure>
-                    <div class="image">
+                    <a href="./img/gallery_1.jpg">
                         <img src="./img/gallery_1.jpg" alt="">
-                        <figcaption></figcaption>
-                    </div>
+                    </a>
+                    <figcaption></figcaption>
                 </figure>
                 <figure>
-                    <div class="image">
+                    <a href="./img/gallery_2.jpg">
                         <img src="./img/gallery_2.jpg" alt="">
-                        <figcaption></figcaption>
-                    </div>
+                    </a>
+                    <figcaption></figcaption>
                 </figure>
                 <figure>
-                    <div class="image">
+                    <a href="./img/gallery_3.jpg">
                         <img src="./img/gallery_3.jpg" alt="">
-                        <figcaption></figcaption>
-                    </div>
+                    </a>
+                    <figcaption></figcaption>
                 </figure>
                 <figure>
-                    <div class="image">
+                    <a href="./img/gallery_4.jpg">
                         <img src="./img/gallery_4.jpg" alt="">
-                        <figcaption></figcaption>
+                    </a>
+                    <figcaption></figcaption>
                     </div>
                 </figure>
             </div>
