--- a/index.html
+++ b/index.html
@@ -198,9 +198,29 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="footer__credits">
+            <h2 class="footer__typolib">TypoLib</h2>
+            <p>Created by: Veronika Látová</p>
+            <p>Email: <a href="mailto:veronika.latova.020@pslib.cz">veronika.latova.020@pslib.cz</a></p>
+            <p>Project by: <a href="https://pslib.cz/">SPŠ a VOŠ Liberec</a></p>
+        </div>
+        <div class="footer__info">
+            <p>This project was created by using:</p>
+            <div class="footer__html-css">
+                <div class="footer__img-div">
+                    <img src="./img/HTML5_logo.png" alt="">
+                </div>
+                <div class="footer__img-div">
+                    <img src="./img/CSS3.png" alt="">
+                </div>
+            </div>
+        </div>
         <div>
-
+            <p>This library is available to download on GitHub:</p>
+            <a class="footer__img-git" href="https://github.com/pslib-cz/2023-l4-web-typographic-library-VeronikaLatova">
+                <img src="./img/GitHub-Mark.png" alt="">
+            </a>
         </div>
     </footer>
 </body>
