--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <a href="./img/singlephoto.jpg">
                     <img src="./img/singlephoto.jpg" alt="">
                 </a>
-                <figcaption></figcaption>
+                <figcaption class="image__caption">This is how figcaption works</figcaption>
             </figure>
             <h3>Gallery</h3>
             <div class="gallery">
@@ -174,25 +174,25 @@
                     <a href="./img/gallery_1.jpg">
                         <img src="./img/gallery_1.jpg" alt="">
                     </a>
-                    <figcaption></figcaption>
+                    <figcaption class="image__caption">Photo number 1</figcaption>
                 </figure>
                 <figure>
                     <a href="./img/gallery_2.jpg">
                         <img src="./img/gallery_2.jpg" alt="">
                     </a>
-                    <figcaption></figcaption>
+                    <figcaption class="image__caption">Photo number 2</figcaption>
                 </figure>
                 <figure>
                     <a href="./img/gallery_3.jpg">
                         <img src="./img/gallery_3.jpg" alt="">
                     </a>
-                    <figcaption></figcaption>
+                    <figcaption class="image__caption">Photo number 3</figcaption>
                 </figure>
                 <figure>
                     <a href="./img/gallery_4.jpg">
                         <img src="./img/gallery_4.jpg" alt="">
                     </a>
-                    <figcaption></figcaption>
+                    <figcaption class="image__caption">Photo number 4</figcaption>
                     </div>
                 </figure>
             </div>
