--- a/index.html
+++ b/index.html
@@ -164,33 +164,33 @@
             <h3>Single image</h3>
             <figure>
                 <a href="./img/singlephoto.jpg">
-                    <img src="./img/singlephoto.jpg" alt="">
+                    <img src="./img/singlephoto.jpg" alt="White computer screen with purple lights around">
                 </a>
                 <figcaption class="image__caption">This is how figcaption works</figcaption>
             </figure>
-            <h3>Gallery</h3>
+            <h3>Gallery (Picture Alignment)</h3>
             <div class="gallery">
                 <figure>
                     <a href="./img/gallery_1.jpg">
-                        <img src="./img/gallery_1.jpg" alt="">
+                        <img src="./img/gallery_1.jpg" alt="Three people working on computer">
                     </a>
                     <figcaption class="image__caption">Photo number 1</figcaption>
                 </figure>
                 <figure>
                     <a href="./img/gallery_2.jpg">
-                        <img src="./img/gallery_2.jpg" alt="">
+                        <img src="./img/gallery_2.jpg" alt="Computers">
                     </a>
                     <figcaption class="image__caption">Photo number 2</figcaption>
                 </figure>
                 <figure>
                     <a href="./img/gallery_3.jpg">
-                        <img src="./img/gallery_3.jpg" alt="">
+                        <img src="./img/gallery_3.jpg" alt="Four notebook screens">
                     </a>
                     <figcaption class="image__caption">Photo number 3</figcaption>
                 </figure>
                 <figure>
                     <a href="./img/gallery_4.jpg">
-                        <img src="./img/gallery_4.jpg" alt="">
+                        <img src="./img/gallery_4.jpg" alt="A hand clicking on a computer mouse, computer screen is also visible in this image">
                     </a>
                     <figcaption class="image__caption">Photo number 4</figcaption>
                     </div>
