--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class="navigace__li"><a class="navigace__a" href="#text">Text</a></li>
                 <li class="navigace__li"><a class="navigace__a" href="#buttons">Buttons</a></li>
                 <li class="navigace__li"><a class="navigace__a" href="#lists">Lists</a></li>
-                <li class="navigace__li"><a class="navigace__a" href="#tables">Tables</a></li>
+                <li class="navigace__li"><a class="navigace__a" href="#table">Table</a></li>
                 <li class="navigace__li"><a class="navigace__a" href="#photos">Photos</a></li>
             </menu>
         </nav>
@@ -112,8 +112,8 @@
                 </ul>
             </div>
         </section>
-        <section id="tables">
-            <h2>Tables</h2>
+        <section id="table">
+            <h2>Table</h2>
             <p>Transform raw information into insightful visuals that captivate your audience and convey complex data into something organized.</p>
             <div class="code">
                 <code>&#60table&#62</code> <code>&#60caption&#62</code> <code>&#60thead&#62</code> <code>&#60tbody&#62</code> <code>&#60tfoot&#62</code> <code>&#60th&#62</code> <code>&#60td&#62</code> <code>&#60tr&#62</code>
