--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>Make a bold statement with our diverse collection of headings.</p>
             <div>
                 <div class="code">
-                    <code>&#60h1&#62</code> <code>&#60h2&#62</code> <code>&#60h3&#62</code> <code>&#60h4&#62</code> <code>&#60h5&#62</code>
+                    <code>&lt;h1&gt; &lt;h2&gt; &lt;h3&gt; &lt;h4&gt; &lt;h5&gt;</code>
                 </div>
             </div>
             <div>
@@ -50,7 +50,7 @@
             <h2>Text</h2>
             <p>This typographic library offers an array of styles to suit every message.</p>
             <div class="code">
-                <code>&#60p&#62</code> <code>&#60a&#62</code> <code>&#60i&#62</code> <code>&#60s&#62</code> <code>&#60b&#62</code> <code>&#60mark&#62</code> <code>&#60small&#62</code>
+                <code>&lt;p&gt; &lt;a&gt; &lt;b&gt; &lt;i&gt; &lt;s&gt; &lt;small&gt; &lt;mark&gt;</code>
             </div>
             <p>This is how <b>bold</b> text looks like. This is an <i>italic</i> text. This text is <a href="#">clickable</a> and this is <s>striked</s>. This one is <mark>marked</mark> and this one is <small>small</small>.</p>
         </section>
@@ -67,7 +67,7 @@
             <h2>Lists</h2>
             <p>Organize and prioritize effortlessly with our versatile list variants.</p>
             <div class="code">
-                <code>&#60ol&#62</code> <code>&#60ul&#62</code> <code>&#60li&#62</code>
+                <code>&lt;ol&gt; &lt;ul&gt; &lt;li&gt;</code>
             </div>
             <div>
                 <h3>Ordered list</h3>
@@ -116,7 +116,7 @@
             <h2>Table</h2>
             <p>Transform raw information into insightful visuals that captivate your audience and convey complex data into something organized.</p>
             <div class="code">
-                <code>&#60table&#62</code> <code>&#60caption&#62</code> <code>&#60thead&#62</code> <code>&#60tbody&#62</code> <code>&#60tfoot&#62</code> <code>&#60th&#62</code> <code>&#60td&#62</code> <code>&#60tr&#62</code>
+                <code>&lt;table&gt; &lt;caption&gt; &lt;thead&gt; &lt;tbody&gt; &lt;tfoot&gt; &lt;th&gt; &lt;td&gt; &lt;tr&gt;</code>
             </div>
             <div>
                 <table>
@@ -161,6 +161,7 @@
         <section id="photos">
             <h2>Photos</h2>
             <p>Transform your photos into captivating visual stories with our typography. Elevate your photo gallery's narrative, adding depth and style to every image.</p>
+            <div class="code"><code>&lt;img&gt; &lt;figcaption&gt; &lt;figure&gt;</code></div>
             <h3>Single image</h3>
             <figure>
                 <a href="./img/singlephoto.jpg">
@@ -193,7 +194,6 @@
                         <img src="./img/gallery_4.jpg" alt="A hand clicking on a computer mouse, computer screen is also visible in this image">
                     </a>
                     <figcaption class="image__caption">Photo number 4</figcaption>
-                    </div>
                 </figure>
             </div>
         </section>
